# censAI

./: .gitignore  README.md  app.py  censor.py  main.py  nudity.py  profanity.py  pyproject.toml  requirements.txt  settings.py  sub_manip.py  subtitles.py  testing_curses.py  util.py  video_manip.py
config/: scenedetect.cfg  settings.py
data/: dataframe_manager.py
design/: cases.smmx  colors.txt  ui.md
enums/: CensorshipStrength.py  LoggingColors.py  SceneCols.py  SceneImageCols.py
experimenting/: ep1 short.synced.srt  ep1 short.synced.synced.srt  ep1-Scenes.csv  ep1.edl  ep1.otio  ep1.qp  ep1.synced.srt  ep1.xml  general_tinkering.ipynb  scene_change.py  scene_change_full_gpt.py  scene_change_full_gpt_2.py  scene_change_full_gpt_3.py  scene_change_full_gpt_4.py  six_feet_under_ep_1-Scenes.csv  testing nudenet.ipynb  testing_audio_censoring.ipynb  testing_fuzzy_search.ipynb  testing_general.py  testing_logging.py  testing_nsfw_scene_detection.ipynb  testing_pose_detection.ipynb  testing_profanity_libs.ipynb  testing_progress_bars.ipynb  testing_scene_context_detection.ipynb  testing_scene_detection_libs.ipynb  testing_scene_detetction_image_sim.ipynb  testing_skin_detection.ipynb  testing_subtitle_parsing.ipynb
temp/: scenes.csv  scenes.pkl
test/: ep1 short.srt  ep1.srt  ep2.srt  jstest.js  testing nudenet.ipynb  testing_audio_captioning.ipynb  testing_audio_censoring.ipynb  testing_grammar_correction.ipynb  testing_nsfw_scene_detection.ipynb  testing_ollama_subtitles.ipynb  testing_profanity_libs.ipynb  testing_progress_bars.ipynb  testing_questionary.py  (+3 more)
(+67 files in other folders)
